Added backend and frontend folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,8 @@
-# Node
-frontend/node_modules/
-frontend/build/
-
-# Python
 backend/venv/
 backend/__pycache__/
+backend/instance/
 backend/migrations/
 
-# Environment files
-.backend-env
-.env
-backend/.env
-
-# Editor
-.vscode/
-.idea/
-*.log
+frontend/node_modules/
+frontend/build/
+frontend/.vite/
